[package]
name = "cbuffer"
version = "0.1.0"
authors = ["castellan <castellan@vip.sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2"
crossbeam = "0.7.3"
byteorder = "^1.3"

[dev-dependencies]
chrono = "^0.4"